taban lak ya sherif 3

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -655,7 +655,47 @@
           ]
         }
       ],
-      "source": []
+      "source": [
+        "models = {\n",
+        "    'Logistic Regression': LogisticRegression(max_iter=1000, class_weight='balanced', random_state=42),\n",
+        "    'Random Forest': RandomForestClassifier(class_weight='balanced', random_state=42),\n",
+        "    'Gradient Boosting': GradientBoostingClassifier(random_state=42)\n",
+        "}\n",
+        "\n",
+        "results = {}\n",
+        "\n",
+        "for name, model in models.items():\n",
+        "    print(f\"Training {name}...\")\n",
+        "    # Create pipeline with SMOTE\n",
+        "    pipeline = ImbPipeline(steps=[\n",
+        "        ('preprocessor', preprocessor),\n",
+        "        ('smote', SMOTE(random_state=42)),\n",
+        "        ('classifier', model)\n",
+        "    ])\n",
+        "\n",
+        "    # Train\n",
+        "    pipeline.fit(X_train, y_train)\n",
+        "\n",
+        "    # Predict\n",
+        "    y_pred = pipeline.predict(X_test)\n",
+        "    y_prob = pipeline.predict_proba(X_test)[:, 1]\n",
+        "\n",
+        "    # Evaluate\n",
+        "    roc = roc_auc_score(y_test, y_prob)\n",
+        "    pr_auc = average_precision_score(y_test, y_prob)\n",
+        "\n",
+        "    results[name] = {\n",
+        "        'model': pipeline,\n",
+        "        'ROC_AUC': roc,\n",
+        "        'PR_AUC': pr_auc,\n",
+        "        'Report': classification_report(y_test, y_pred)\n",
+        "    }\n",
+        "\n",
+        "    print(f\"{name} Results:\")\n",
+        "    print(f\"ROC AUC: {roc:.4f}\")\n",
+        "    print(f\"PR AUC: {pr_auc:.4f}\")\n",
+        "    print(\"-\"*30)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -686,7 +726,26 @@
           ]
         }
       ],
-      "source": []
+      "source": [
+        "rf_pipeline = ImbPipeline(steps=[\n",
+        "    ('preprocessor', preprocessor),\n",
+        "    ('smote', SMOTE(random_state=42)),\n",
+        "    ('classifier', RandomForestClassifier(class_weight='balanced', random_state=42))\n",
+        "])\n",
+        "\n",
+        "param_dist = {\n",
+        "    'classifier__n_estimators': [100, 200, 300],\n",
+        "    'classifier__max_depth': [None, 10, 20, 30],\n",
+        "    'classifier__min_samples_split': [2, 5, 10],\n",
+        "    'classifier__min_samples_leaf': [1, 2, 4]\n",
+        "}\n",
+        "\n",
+        "search = RandomizedSearchCV(rf_pipeline, param_distributions=param_dist, n_iter=10, scoring='f1', cv=3, random_state=42, n_jobs=-1)\n",
+        "search.fit(X_train, y_train)\n",
+        "\n",
+        "print(\"Best Params:\", search.best_params_)\n",
+        "best_model = search.best_estimator_"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -717,7 +776,22 @@
         }
       ],
       "source": [
-        "import os\n"
+        "import os\n",
+        "\n",
+        "# Create directories if they don't exist\n",
+        "os.makedirs('../models', exist_ok=True)\n",
+        "os.makedirs('/content/Downloads', exist_ok=True)\n",
+        "\n",
+        "joblib.dump(best_model, '../models/best_model.pkl')\n",
+        "\n",
+        "# Save test predictions for evaluation notebook\n",
+        "test_preds = pd.DataFrame({\n",
+        "    'y_true': y_test,\n",
+        "    'y_pred': best_model.predict(X_test),\n",
+        "    'y_prob': best_model.predict_proba(X_test)[:, 1]\n",
+        "})\n",
+        "test_preds.to_csv('/content/Downloads/test_predictions.csv', index=False)\n",
+        "print(\"Saved model and predictions.\")"
       ]
     }
   ],
